Fix text alignment next to logo

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1243,8 +1243,8 @@
 
 	.about-opening-paragraph {
 		display: flex;
-		align-items: center;
-		gap: 10px;
+		align-items: flex-end;
+		gap: 20px;
 	}
 
 	/* Groups in Menu page: Coffee, Tea, Baked Goods...etc. */
